content/en/platform/corda/4.12/community/node-upgrade-notes.md
---
aliases:
- /head/node-upgrade-notes.html
- /HEAD/node-upgrade-notes.html
- /node-upgrade-notes.html
date: '2020-04-07T12:00:00Z'
menu:
  corda-community-4-12:
    identifier: corda-community-4-12-node-upgrade-notes
    parent: corda-community-4-12-upgrading
    weight: 30
tags:
- node
- upgrade
- notes
title: Upgrading your node to Corda Open Source Edition 4.12
---


Corda releases strive to be backwards compatible, so upgrading a node is fairly straightforward and should not require changes to
applications. It consists of the following steps:

1. [Drain the node](#step-1-drain-the-node)
2. [Make a backup of your node directories and/or database](#step-2-make-a-backup-of-your-node-directories-andor-database)
3. [Download Corda Open Source Edition](#step-3-download-corda-open-source-edition)
4. [Upgrade the node to Corda 4.11 or later](#step-4-upgrade-the-node-to-corda-411-or-later)
5. [Replace the corda.jar file with the new version](#step-5-replace-cordajar-with-the-new-version)
6. [Update the configuration](#step-6-update-the-configuration)
7. [Update the CorDapps](#step-7-update-the-cordapps).
8. [Create legacy folders](#step-8-create-legacy-folders)
9. [Start the node with the run-migration-scripts subcommand](#step-9-start-the-node-with-run-migration-scripts-subcommand)
10. [Start the node in the normal way](#step-10-start-the-node-in-the-normal-way)
11. [Undrain the node](#step-11-undrain-the-node)

The protocol is designed to tolerate node outages, so during the upgrade process peers on the network will wait for your node to come back.

## Step 1: Drain the node

Before a node or application on it can be upgraded, the node must be put in [Draining mode]({{< relref "key-concepts-node.md#draining-mode" >}}). This brings the currently running
[Flows]({{< relref "key-concepts-flows.md" >}}) to a smooth halt such that existing work is finished and new work is queuing up rather than being processed.

Draining flows is a key task for node administrators to perform. It exists to simplify applications by ensuring apps don’t have to be
able to migrate workflows from any arbitrary point to other arbitrary points, a task that would rapidly become infeasible as workflow
and protocol complexity increases.

To drain the node, run the `gracefulShutdown` command. This will wait for the node to drain and then shut down the node when the drain
is complete.

{{< warning >}}
The length of time a node takes to drain depends on both how your applications are designed, and whether any apps are currently
talking to network peers that are offline or slow to respond. It is thus hard to give guidance on how long a drain should take, but in
an environment with well written apps and in which your counterparties are online, drains may need only a few seconds.

{{< /warning >}}

## Step 2: Make a backup of your node directories and/or database

It’s always a good idea to make a backup of your data before upgrading any server. This will make it easy to roll back if there’s a problem.
You can simply make a copy of the node’s data directory to enable this. If you use an external non-H2 database please consult your database
user guide to learn how to make backups.

We provide some [backup recommendations]({{< relref "node-administration.md#backup-recommendations" >}}) if you’d like more detail.

## Step 3: Download Corda Open Source Edition

Download the required version of Corda Open Source Edition; for more information, see [Release packs and checksums]({{< relref "release-checksum-os.md" >}}).

## Step 4: Upgrade the node to Corda 4.11 or later

Ensure your node is running Corda 4.11 or later.

## Step 5: Replace `corda.jar` with the new version

Download the latest version of Corda from [Maven](https://download.corda.net/maven/corda-releases/net/corda/corda-node/4.12/corda-node-4.12.jar).
Make sure it’s available on your path, and that you’ve read the [Release notes]({{< relref "release-notes.md" >}}), in particular to discover what version of Java this
node requires.

{{< important >}}
Corda 4.12 requires Java 17.0.9 or any higher Java 17 patch level. Java 18+ is not currently supported.

{{< /important >}}

## Step 6: Update the configuration

This step is only required when updating from versions less than or equal to 4.5.

Remove any `transactionIsolationLevel`, `initialiseSchema`, or `initialiseAppSchema` entries from the database section of your configuration.

## Step 7: Update the CorDapps

When upgrading from Corda 4.11 to Corda 4.12 there are specific changes that need to be made to the CorDapps contract version and minimum platform version (MPV), see [Upgrade 4.11 CorDapps]({{< relref "../enterprise/upgrade-guide.md#upgrade-411-cordapps">}}) for more information.

## Step 8: Create legacy folders

When upgrading to 4.12 and the network contains a mix of 4.12 and pre-4.12 nodes, you must create a `legacy-contracts` folder and, if required, a `legacy-jars` folder. See [Corda Open Source Edition 4.11 to 4.12 upgrade guide]({{< relref "comm-upgrade-guide.md">}}) for details.

## Step 9: Start the node with `run-migration-scripts` subcommand

Start the node with the `run-migration-scripts` sub-command with `--core-schemas` and `--app-schemas`.

```bash
java -jar corda.jar run-migration-scripts --core-schemas --app-schemas
```

The node will perform any automatic data migrations required, which may take some
time. If the migration process is interrupted it can be continued simply by starting the node again, without harm. The node will stop automatically when migration is complete.

{{< important >}}
This step may incur a delay whilst any needed database migrations are applied
{{</ important >}}

## Step 10: Start the node in the normal way

Start the node in the normal way.

## Step 11: Undrain the node

Finally, undrain the node to re-enable processing of new inbound flows.

You may now do any checks that you wish to perform, read the logs, and so on. When you are ready, use this command at the shell:

`run setFlowsDrainingModeEnabled enabled: false`

Your upgrade is complete.
